syntax = "proto3";

package message.pb;


message CoreMessage {
    message Member {
        bytes id = 1;
        string name = 2;
        string avatar = 3;
    }
    
    string id = 1;
    string groupId = 2;
    Member member = 3;
    string msgType = 4;
    string mimeType = 5;
    bytes  payload = 6;
    string attachmentId = 7;
    uint64 lamportime = 8;
    int64  timestamp = 9;
    bytes  signature = 10;
}

message MessageEnvelope {
    string      id = 1;
    CoreMessage coreMessage = 2;
    bytes       attachment = 3;
}

message GroupMessage {

    enum SendState {
        Sending = 0;
        SendSucc = 1;
        SendFail = 2;
    }

    string      id = 1;
    string      groupId = 2;
    CoreMessage coreMessage = 3;
    SendState   sendState = 4;
    // directly or deposit
    bool        isDeposit = 5;
    int64       createTime = 6;
    int64       updateTime = 7;
}

message GroupMessageAck { 
    string id = 1;
}